# src/_modules/user/_modules/customer/controllers/customer.create.controller.ts
@@ -1,5 +1,5 @@
 import { Body, Controller, Post, Res } from '@nestjs/common';
-import { ApiTags } from '@nestjs/swagger';
+import { ApiOperation, ApiTags } from '@nestjs/swagger';
 import { Response } from 'express';
 import { Auth } from 'src/_modules/authentication/decorators/auth.decorator';
 import { tag } from 'src/globals/helpers/tag.helper';
@@ -7,7 +7,10 @@ import { ResponseService } from 'src/globals/services/response.service';
 import { CustomerCreateService } from '../services/customer.create.service';
 import { CreateCustomerDTO } from '../dto/create.customer.dto';
 import { OTPService } from 'src/_modules/authentication/services/otp.service';
-import { OTPType } from '@prisma/client';
+import { OTPType, SessionType } from '@prisma/client';
+import { CurrentUser } from 'src/_modules/authentication/decorators/current-user.decorator';
+import { TokenService } from 'src/_modules/authentication/services/jwt.service';
+import { IpAddress } from 'src/_modules/authentication/decorators/ip.decorator';
 
 const prefix = 'customers';
 @Controller(prefix)
@@ -18,11 +21,31 @@ export class CustomerCreateController {
     private readonly service: CustomerCreateService,
     private readonly OTPService: OTPService,
     private responses: ResponseService,
+    private readonly tokenService: TokenService,
   ) {}
   @Post('/')
-  async createUser(@Res() res: Response, @Body() dto: CreateCustomerDTO) {
+  @ApiOperation({
+    description: 'Create a new customer with permission or register customer',
+  })
+  async createUser(
+    @IpAddress() ip: string,
+    @Res() res: Response,
+    @Body() dto: CreateCustomerDTO,
+    @CurrentUser() currentUser: CurrentUser,
+  ) {
     const user = await this.service.create(dto);
     await this.OTPService.generateOTP(user.id, OTPType.EMAIL_VERIFICATION);
-    return this.responses.success(res, 'customer created successfully');
+    const token = !currentUser
+      ? await this.tokenService.generateToken(
+          user.id,
+          ip,
+          undefined,
+          SessionType.VERIFY,
+        )
+      : undefined;
+    return this.responses.success(res, 'customer created successfully', {
+      user,
+      token,
+    });
   }
 }
